# Software-Review

./: README.md
Software_review/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  softwarelist.cpp  softwarelist.h  softwarereview.cpp  softwarereview.h
